<resources>
    <string name="app_name">SIFACMOVIL</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="MensajeContraseña">Contraseña</string>
    <string name="MensajeNombreUsuario">Nombre Usuario</string>
    <string name="MensajeInicioLogin">Login Sifac MyF</string>
    <string name="TextoBotonIngresarLogin">Ingresar</string>
    <string name="IngresarNuevoUsuario">Usuario Nuevo</string>
    <string name="IngresarClientesCargas">Ingresar Clientes y Carga</string>
    <string name="Iniciardia">Empezar Día</string>
    <string name="TextoListainventario">\tListado de los productos \ncon sus existencias/precios</string>
    <string name="ActualizarInventario">Actualizar Inventario</string>
    <string name="TextoListaFacturaVEnta">\tListado de todas las \ncon facturas de venta</string>
    <string name="TextoListaDetalleFacturaVEnta">\tListado de todos los  \nproductos de la venta</string>
    <string name="ActualizarFacturaVEnta">Actualizar Factura Venta</string>
    <string name="ConsultarInventario">Consutar Inventario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="TexoInformativoNuevoUsuario">Ingrese los siguientes datos del usuario</string>
    <string name="NuevoNombreUsuario">Nuevo Nombre Usuario</string>
    <string name="NuevaContraseña">Nueva Contraseña</string>
    <string name="AceptarNuevoUsuario">Ingresar Usuario</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
