<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christian.sifacmovil.NuevoUsuarioActivity">


    <TextView
        android:id="@+id/tvNuevoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TexoInformativoNuevoUsuario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/etNombreUsuarioNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NuevoNombreUsuario"
        android:layout_below="@+id/tvNuevoUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:id="@+id/etContraseñaNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NuevaContraseña"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/etNombreUsuarioNuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp" />

    <Button
        android:id="@+id/btIngresarNuevoUSuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AceptarNuevoUsuario"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        android:layout_below="@+id/etContraseñaNueva"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

</RelativeLayout>
