<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christian.sifacmovil.IngresarActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MensajeInicioLogin"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btIngresar"
        android:layout_alignEnd="@+id/btIngresar"
        android:layout_marginTop="25dp" />


    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MensajeNombreUsuario"
        android:layout_below="@+id/tvLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/MensajeContraseña"
        android:inputType="textPassword"
        android:layout_alignTop="@+id/etNombreUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp" />

    <Button
        android:id="@+id/btIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoBotonIngresarLogin"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorButton"
        android:layout_below="@+id/etContraseña"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:layout_below="@+id/btIngresar"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_copyright_black_24dp"
        android:layout_marginBottom="7dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tvLogin"
        android:layout_toStartOf="@+id/tvLogin" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIFACMYF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
